--- a/Warsztaty1_zesp1-master/index.html
+++ b/Warsztaty1_zesp1-master/index.html
@@ -22,6 +22,24 @@
 				</div>
 			</section>
 
+			<!-- One -->
+				<section id="one" class="main style1">
+					<div class="container">
+						<div class="row 150%">
+							<div class="6u 12u$(medium)">
+								<header class="major">
+									<h2>Lorem ipsum dolor adipiscing<br />
+									amet dolor consequat</h2>
+								</header>
+								<p>iscing id accumsan.</p>
+							</div>
+							<div class="6u$ 12u$(medium) important(medium)">
+								<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+							</div>
+						</div>
+					</div>
+				</section>
+
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
